--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -6,4 +6,14 @@
         cursor: pointer;
     }
     
+    th {
+        white-space: nowrap;
+    }
+
+    .controls {
+        white-space: nowrap;
+        a {
+            padding: 1px;
+        }
+    }
 }
