adding in delete hooks

--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -12,8 +12,13 @@
 
     .controls {
         white-space: nowrap;
+        
         a {
+            //color: #000;
             padding: 1px;
+        }
+        a:hover {
+            //color: @link-hover-color;
         }
     }
 }
