--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -1,6 +1,8 @@
 
 .iron-table-container {
     
+    position: relative;
+
     a:hover {
         text-decoration: none;
         cursor: pointer;
@@ -20,5 +22,11 @@
         a:hover {
             //color: @link-hover-color;
         }
+    }
+
+    .back-button {
+        position: absolute;
+        top: 15px;
+        left: -23px;
     }
 }
