--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -29,4 +29,10 @@
         top: 15px;
         left: -23px;
     }
+
+    .new-record {
+        position: absolute;
+        top: 10px;
+        right: 15px;
+    }
 }
