--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -3,6 +3,19 @@
     
     position: relative;
 
+    h3 {
+        margin: 0px;
+    }
+
+    .ironTableFilter {
+        margin: 5px;
+        .form-control {
+            height: 24px;
+        }
+    }
+
+    
+
     a:hover {
         text-decoration: none;
         cursor: pointer;
@@ -32,7 +45,7 @@
 
     .new-record {
         position: absolute;
-        top: 10px;
+        top: 0px;
         right: 15px;
     }
 }
