--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -15,8 +15,6 @@
         }
     }
 
-    
-
     a:hover {
         text-decoration: none;
         cursor: pointer;
@@ -49,5 +47,22 @@
         position: absolute;
         top: 0px;
         right: 15px;
+    }
+
+    .loading {
+        position: relative;
+        text-align: center;
+        margin-top: 30px;
+        width: 100%;
+        height: 100%;
+        z-index: 1000;
+        //background-color: #ddd;
+        //opacity: 0.8;
+     
+        #spinner {
+            position: relative;
+            margin: auto;
+            top: 45%;
+        }
     }
 }
