--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -66,3 +66,22 @@
         }
     }
 }
+
+.ironTableLoading {
+    position: relative;
+    text-align: center;
+    margin-top: 30px;
+    width: 100%;
+    height: 100%;
+    min-height: 100px;
+    z-index: 1000;
+    //background-color: blue; //#ddd;
+    //opacity: 0.8;
+ 
+    #spinner {
+        position: relative;
+        margin: auto;
+        top: 45%;
+        //color: blue;
+    }
+}
