add table download

--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -43,7 +43,7 @@
         left: -23px;
     }
 
-    .new-record {
+    .links {
         position: absolute;
         top: 0px;
         right: 15px;
