--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -5,17 +5,36 @@
 
     padding: 10px;
 
+    .panel-heading {
+        padding-top: 5px;
+        padding-bottom: 5px;
+    }
+
+    .iron-table-heading {
+        position: relative;
+        .links {
+            position: absolute;
+            top: 2px;
+            right: 7px;
+        }
+    }
+
+    .panel-body {
+        padding: 0px;
+    }
+    
+    .iron-table-filter {
+        float: right !important;
+        //padding: 7px;
+        margin: 7px;
+        .form-control {
+            height: 24px;
+        }
+    }
 
     h3 {
         margin: 0px;
         min-height: 35px;
-    }
-
-    .ironTableFilter {
-        margin: 5px;
-        .form-control {
-            height: 24px;
-        }
     }
 
     a:hover {
@@ -46,12 +65,6 @@
         left: -23px;
     }
 
-    .links {
-        position: absolute;
-        top: 2px;
-        right: 15px;
-    }
-
     .loading {
         position: relative;
         text-align: center;
@@ -67,6 +80,16 @@
             margin: auto;
             top: 45%;
         }
+    }
+
+    .iron-table-pager-display {
+        float: left !important;
+        padding-left: 7px;
+    }
+
+    .iron-table-pager {
+        float: right !important;
+        padding-right: 7px;
     }
 }
 
