--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -1,10 +1,11 @@
 
 .iron-table-container {
-    
     position: relative;
-
     padding: 10px;
 
+    .well {
+        margin: 15px;
+    }
     .panel-heading {
         padding-top: 5px;
         padding-bottom: 5px;
