--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -67,11 +67,13 @@
     }
 
     .loading {
-        position: relative;
+        //position: relative;
         text-align: center;
-        margin-top: 30px;
-        width: 100%;
-        height: 100%;
+        margin-top: 40px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 40px;
+        height: 40px;
         z-index: 1000;
         //background-color: #ddd;
         //opacity: 0.8;
@@ -94,13 +96,16 @@
     }
 }
 
+/*
 .ironTableLoading {
-    position: relative;
+    //position: relative;
     text-align: center;
     margin-top: 30px;
-    width: 100%;
-    height: 100%;
-    min-height: 100px;
+    width: 40px
+    height: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    //min-height: 100px;
     z-index: 1000;
     //background-color: blue; //#ddd;
     //opacity: 0.8;
@@ -112,3 +117,4 @@
         //color: blue;
     }
 }
+*/
