--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -67,7 +67,7 @@
     }
 
     .loading {
-        //position: relative;
+        position: relative;
         text-align: center;
         margin-top: 40px;
         margin-left: auto;
