--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -95,3 +95,22 @@
         padding-right: 7px;
     }
 }
+
+.ironTableLoading {
+    position: relative;
+    text-align: center;
+    margin-top: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 40px;
+    height: 40px;
+    z-index: 1000;
+    //background-color: #ddd;
+    //opacity: 0.8;
+ 
+    #spinner {
+        position: relative;
+        margin: auto;
+        top: 45%;
+    }
+}
