selects for inline and forms

--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -94,6 +94,13 @@
         float: right !important;
         padding-right: 7px;
     }
+
+    .select {
+        select.input-sm {
+            height: 24px;
+            line-height: 24px;
+        }
+    }
 }
 
 .ironTableLoading {
