--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -36,6 +36,11 @@
     h3 {
         margin: 0px;
         min-height: 35px;
+
+        small {
+            font-size: 55%;
+            margin-left: 10px;
+        }
     }
 
     a:hover {
