add in json popup

--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -63,6 +63,7 @@
         a:hover {
             //color: @link-hover-color;
         }
+
     }
 
     .back-button {
@@ -126,3 +127,9 @@
         top: 45%;
     }
 }
+
+
+.popover.iron-table-popover {
+    max-width: 600px;
+}
+
