only show pager if number of records larger than increment

--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -93,11 +93,13 @@
 
     .iron-table-pager-display {
         float: left !important;
+        padding-top: 3px;
         padding-left: 7px;
     }
 
     .iron-table-pager {
         float: right !important;
+        padding-top: 3px;
         padding-right: 7px;
     }
 
