overflow for table

--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -3,6 +3,10 @@
     position: relative;
     padding: 10px;
 
+    .table-div {
+        overflow-x: scroll;
+    }
+    
     .well {
         margin: 15px;
     }
