switch overflow to auto

--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -4,9 +4,9 @@
     padding: 10px;
 
     .table-div {
-        overflow-x: scroll;
+        overflow-x: auto;
     }
-    
+
     .well {
         margin: 15px;
     }
