use table-responsive

--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -3,6 +3,7 @@
     position: relative;
     padding: 10px;
 
+    // I think I am doing what table-responsive
     .table-div {
         overflow-x: auto;
         table {
