--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -109,6 +109,7 @@
         float: right !important;
         padding-top: 3px;
         padding-right: 7px;
+        padding-bottom: 3px;
     }
 
     .select {
