--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -36,6 +36,9 @@
         float: right !important;
         //padding: 7px;
         margin: 7px;
+        #filter-value {
+            width: 200px;
+        }
         .form-control {
             height: 24px;
         }
