--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -1,7 +1,7 @@
 
 .iron-table-container {
     position: relative;
-    padding: 10px;
+    padding: 0.7em;
 
     // I think I am doing what table-responsive
     .table-div {
@@ -31,7 +31,8 @@
     }
 
     .table-container {
-      width: 100%;
+      margin: auto;
+      width: 99%;
       overflow: auto;
     }
 
@@ -45,7 +46,7 @@
       color: #333;
       position: relative;
       overflow: hidden;
-      margin: 0.5rem 0 1rem 0;
+      margin: 0.5rem 0 0.5rem 0;
       background-color: #fff;
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
@@ -89,13 +90,16 @@
     }
 
     h3 {
-        margin: 0px;
-        min-height: 35px;
+      margin: 0px;
+      min-height: 35px;
+      font-weight: 300;
 
-        small {
-            font-size: 55%;
-            margin-left: 10px;
-        }
+      small {
+        font-style: italic;
+        font-weight: 300;
+        font-size: 55%;
+        margin-left: 10px;
+      }
     }
 
     a:hover {
@@ -104,7 +108,8 @@
     }
     
     th {
-        white-space: nowrap;
+      font-weight: 500;
+      white-space: nowrap;
     }
 
     .controls {
