--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -57,6 +57,13 @@
       background-clip: padding-box;
     }
 
+    .no-records {
+      margin:2em;
+      font-size: 1.6em;
+      font-weight: 500;
+      text-align: center;
+    }
+
     .iron-table-heading {
       position: relative;
       padding: 0.5em;
