--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -1,4 +1,7 @@
 
+@box-padding: 0.6em;
+
+
 .iron-table-container {
     position: relative;
     padding: 0.7em;
@@ -47,6 +50,7 @@
       position: relative;
       overflow: hidden;
       margin: 0.5rem 0 0.5rem 0;
+      padding: @box-padding;
       background-color: #fff;
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
@@ -55,6 +59,9 @@
       -moz-border-radius: 2px;
       border-radius: 2px;
       background-clip: padding-box;
+      .iron-table-heading {
+        margin: -@box-padding;
+      }
     }
 
     .no-records {
@@ -66,12 +73,13 @@
 
     .iron-table-heading {
       position: relative;
-      padding: 0.5em;
-      width: 100%;
+      padding: 1em 1em 0.5em 1em;
+      margin: -1em;
+      //width: 100%;
       .links {
           position: absolute;
-          top: 0.5em;
-          right: 0.5em;
+          top: 1em;
+          right: 1em;
       }
       .back-btn {
         padding: 0;
@@ -109,9 +117,14 @@
       }
     }
 
+    a {
+      color: #666;
+    }
+
     a:hover {
         text-decoration: none;
         cursor: pointer;
+        color: #111;
     }
     
     th {
