--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -1,213 +1,309 @@
 
 @box-padding: 0.6em;
 
+.iron-table-container.full-screen-on-small {
+  @media only screen and (max-width : 600px) {
+    padding: 0;
+    margin-bottom: 0;
+  }
+}
 
 .iron-table-container {
+  //overflow: hidden;
+  //height: 99%;
+  position: relative;
+  padding: 0.7em;
+  margin-bottom: 1em;
+
+
+  
+  .btn-sm {
+    padding: 0 1rem;
+  }
+
+  // I think I am doing what table-responsive
+  /*
+  .table-div {
+      overflow-x: auto;
+      table {
+          margin: 0px;
+      }
+  }
+  */
+
+  tr {
+    //margin-right: 1em;
+    //margin-left:  1em;
+  }
+
+  th, td {
+    padding: 0em 0.5em;
+    //line-height: 1em;
+    .btn, .btn-flat, .btn-large {
+      margin-bottom: 0;
+    }
+    .select-wrapper {
+      margin-top: 0.5em;
+      input.select-dropdown {
+        margin: 0 0 0.5em 0;
+      }
+    }
+  }
+
+  
+
+  .table-col-head {
+    i {
+      line-height: 1em;
+    }
+  }
+
+  .box {
+    
+    //overflow: hidden;
+    //height: 100%;
+
+    color: #333;
     position: relative;
-    padding: 0.7em;
-
-    // I think I am doing what table-responsive
-    .table-div {
-        overflow-x: auto;
-        table {
-            margin: 0px;
-        }
-    }
-
-    tr {
-      //margin-right: 1em;
-      //margin-left:  1em;
-    }
-
-    th, td {
-      padding: 0em 0.5em;
-      //line-height: 1em;
-      .btn, .btn-flat, .btn-large {
-        margin-bottom: 0;
-      }
-      .select-wrapper {
-        margin-top: 0.5em;
-        input.select-dropdown {
-          margin: 0 0 0.5em 0;
-        }
-      }
+    margin: 0.5rem 0 0.5rem 0;
+    padding: @box-padding;
+    background-color: #fff;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    background-clip: padding-box;
+    
+    .iron-table-heading {
+      margin: -@box-padding;
     }
 
     .table-container {
       margin: auto;
-      width: 99%;
-      overflow: auto;
-    }
+      width: 98%;
+      //height: auto;
+      //height: calc(100% - 200px);
+      //height: 300px; //calc( 99% - 200px ); //80%; 
+      overflow-x: auto;
+      overflow-y: auto;
+      -webkit-overflow-scrolling: touch;
 
-    .table-col-head {
-      i {
-        line-height: 1em;
-      }
-    }
-
-    .box {
-      color: #333;
-      position: relative;
-      overflow: hidden;
-      margin: 0.5rem 0 0.5rem 0;
-      padding: @box-padding;
-      background-color: #fff;
-      -webkit-box-sizing: border-box;
-      -moz-box-sizing: border-box;
-      box-sizing: border-box;
-      -webkit-border-radius: 2px;
-      -moz-border-radius: 2px;
-      border-radius: 2px;
-      background-clip: padding-box;
-      .iron-table-heading {
-        margin: -@box-padding;
-      }
-    }
-
-    .no-records {
-      margin:2em;
-      font-size: 1.6em;
-      font-weight: 500;
-      text-align: center;
-    }
-
-    .iron-table-heading {
-      position: relative;
-      padding: 1em 1em 0.5em 1em;
-      margin: -1em;
-      //width: 100%;
-      .links {
-          position: absolute;
-          top: 1em;
-          right: 1em;
-          a {
-            color: #fff;
-          }
-      }
-      .back-btn {
-        padding: 0;
-        i {
-          font-size: 1.4em;
+      table {
+        //height: 100%; //calc( 99% - 200px ); //80%; 
+        //overflow: hidden;
+        tbody {
+          // height: 300px; // Does not work
+          // overflow-y: auto; // Does not work
         }
       }
     }
+  }
 
-    .panel-body {
-        padding: 0px;
-    }
-    
-    .iron-table-filter {
-      margin: 0 1em !important;
-      #filter-value {
-        //width: 15em;
+  .box.no-box-on-small {
+    @media only screen and (max-width : 600px) {
+      margin: 0;
+      padding: 0;
+      -webkit-border-radius: 0px;
+      -moz-border-radius: 0px;
+      border-radius: 0px;
+      .iron-table-heading {
+        margin: 0;
       }
-      .filter-value-col {
-        padding: 0 !important;
-        line-height: 6.3em;
+      .table-container {
+        margin: auto;
+        width: 100%;
+        //height: auto;
+        //height: calc(100% - 200px);
+        //height: 300px; //calc( 99% - 200px ); //80%; 
+        overflow-x: auto;
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
       }
     }
+  }
 
-    h3 {
-      margin: 0px;
-      min-height: 35px;
+  .no-records {
+    margin:2em;
+    font-size: 1.6em;
+    font-weight: 500;
+    text-align: center;
+  }
+
+  .iron-table-heading {
+    position: relative;
+    padding: 1em 1em 0.5em 1em;
+    margin: -1em;
+    //width: 100%;
+    .subtitle {
+      position: absolute;
+      bottom: -0.3em;
+      left: 6em;
+      font-size: 0.5em;
+      line-height: 1em;
+      //margin-left: 5em;
+      font-style: italic;
+    }
+    .links {
+        position: absolute;
+        top: 1em;
+        right: 1em;
+        a {
+          //color: #fff;
+        }
+    }
+    .links-col, .links {
+      .btn, .btn-flat {
+        padding: 0 1em;
+      } 
+    }
+    .back-btn {
+      padding: 0;
+      i {
+        font-size: 1.4em;
+      }
+    }
+  }
+
+  .panel-body {
+      padding: 0px;
+  }
+  
+  .iron-table-filter {
+    margin: 0 1em !important;
+    .col {
+      //height: 6em;
+      .select-wrapper {
+        margin: 0;
+      }
+    }
+    .filter-value-col {
+      padding: 0 !important;
+      //line-height: 6.4em;
+      input {
+        //margin: 0;
+        //padding: 0;
+        //border: 0;
+      }
+    }
+    #filter-value {
+      //width: 15em;
+    }
+  }
+
+  h3 {
+    margin: 0px;
+    min-height: 35px;
+    font-weight: 300;
+
+    small {
+      font-style: italic;
       font-weight: 300;
-
-      small {
-        font-style: italic;
-        font-weight: 300;
-        font-size: 55%;
-        margin-left: 10px;
-      }
+      font-size: 55%;
+      margin-left: 10px;
     }
+  }
 
+  a {
+    //color: #666;
+  }
+
+  a:hover {
+    text-decoration: none;
+    cursor: pointer;
+    //color: #111;
+  }
+
+  li.disabled {
     a {
-      color: #666;
-    }
-
-    a:hover {
-      text-decoration: none;
-      cursor: pointer;
-      color: #111;
-    }
-
-    li.disabled {
-      a {
-        color: #b3b3b3;
-        cursor: default;
-      }
-      a:hover {
-        color: #b3b3b3;
-        cursor: default;
-      }
-    }
-    a.disabled:hover {
-      color: #b3b3b3;
+      //color: #b3b3b3;
       cursor: default;
     }
+    a:hover {
+      //color: #b3b3b3;
+      cursor: default;
+    }
+  }
+  a.disabled:hover {
+    //color: #b3b3b3;
+    cursor: default;
+  }
+  
+  th {
+    font-weight: 500;
+    white-space: nowrap;
+  }
+
+  .controls {
+    white-space: nowrap;
+    text-align:right;
     
-    th {
-      font-weight: 500;
-      white-space: nowrap;
+    a {
+      //color: #000;
+      padding: 1px;
     }
-
-    .controls {
-        white-space: nowrap;
-        text-align:right;
-        
-        a {
-            //color: #000;
-            //padding: 1px;
-        }
-        a:hover {
-            //color: @link-hover-color;
-        }
-
+    a:hover {
+      //color: @link-hover-color;
     }
+  }
 
-    .back-button {
-        position: absolute;
-        top: 15px;
-        left: -23px;
+  .back-button {
+      position: absolute;
+      top: 15px;
+      left: -23px;
+  }
+
+  .loading {
+    position: relative;
+    text-align: center;
+    margin-top: 30%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60px;
+    height: 60px;
+    z-index: 1000;
+    //background-color: #ddd;
+    //opacity: 0.8;
+ 
+    #spinner {
+        position: relative;
+        margin: auto;
+        top: 45%;
     }
+  }
 
-    .loading {
-      position: relative;
-      text-align: center;
-      margin-top: 30%;
-      margin-left: auto;
-      margin-right: auto;
-      width: 60px;
-      height: 60px;
-      z-index: 1000;
-      //background-color: #ddd;
-      //opacity: 0.8;
-   
-      #spinner {
-          position: relative;
-          margin: auto;
-          top: 45%;
+  .iron-table-pager-display {
+    font-size: 1.3em;
+    //padding-top: 0.3em;
+    margin-left: 1.2em !important;
+  }
+
+  .iron-table-pager {
+    padding-top: .3em;
+    padding-right: 2em !important;
+    padding-bottom: .3em;
+    button {
+      font-size: 2em;
+      padding: 0;
+      margin: 0;
+      i {
+        font-size: 1em !important;
       }
     }
-
-    .iron-table-pager-display {
-      font-size: 1.3em;
-      //padding-top: 0.3em;
-      margin-left: 1.2em !important;
-    }
-
-    .iron-table-pager {
-      padding-top: .3em;
-      padding-right: 2em !important;
-      padding-bottom: .3em;
+    ul {
+      width: 6em;
+      margin-left: auto;
       li {
         font-size: 2em;
+        margin: 0 0em;
       }
       li.disabled {
         //width: 0.2em;
         position: relative;
         //cursor: pointer;
         display: inline-block;
-        overflow: hidden;
+        //overflow: hidden;
         -webkit-user-select: none;
         -moz-user-select: none;
         -ms-user-select: none;
@@ -222,36 +318,37 @@
         transition: all .3s ease-out;
       }
     }
+  }
 
-    .select {
-        select.input-sm {
-            height: 24px;
-            line-height: 24px;
-        }
-    }
+  .select {
+      select.input-sm {
+          height: 24px;
+          line-height: 24px;
+      }
+  }
 
-    .pointer {
-        cursor: pointer;
-    }
+  .pointer {
+      cursor: pointer;
+  }
 }
 
 .ironTableLoading {
-    position: relative;
-    text-align: center;
-    margin-top: 40px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40px;
-    height: 40px;
-    z-index: 1000;
-    //background-color: #ddd;
-    //opacity: 0.8;
- 
-    #spinner {
-        position: relative;
-        margin: auto;
-        top: 45%;
-    }
+  position: relative;
+  text-align: center;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40px;
+  height: 40px;
+  z-index: 1000;
+  //background-color: #ddd;
+  //opacity: 0.8;
+
+  #spinner {
+      position: relative;
+      margin: auto;
+      top: 45%;
+  }
 }
 
 
