--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -5,6 +5,8 @@
   @media only screen and (max-width : 600px) {
     padding: 0;
     margin-bottom: 0;
+    height: 100%;
+    background: #eee;
   }
 }
 
@@ -99,6 +101,7 @@
     @media only screen and (max-width : 600px) {
       margin: 0;
       padding: 0;
+      height: 100%;
       -webkit-border-radius: 0px;
       -moz-border-radius: 0px;
       border-radius: 0px;
@@ -108,6 +111,7 @@
       .table-container {
         margin: auto;
         width: 100%;
+        height: 100%;
         //height: auto;
         //height: calc(100% - 200px);
         //height: 300px; //calc( 99% - 200px ); //80%; 
