do fixed footer

--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -356,6 +356,15 @@
 
 .iron-table-form {
 
+  .input-field {
+    label {
+      color: #333;
+    }
+
+    label.textarea-label {
+      //top: 0.3rem;
+    }
+  }
 
   input.iron-table-checkbox {
       position: relative !important;
@@ -387,7 +396,4 @@
     margin-top: 1rem;
   }
 
-  .input-field label.textarea-label {
-    top: 0.3rem;
-  }
 }
