add in date picker

--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -17,12 +17,9 @@
   padding: 0.7em;
   margin-bottom: 1em;
 
-
-  
   .btn-sm {
     padding: 0 1rem;
   }
-
 
   tr {
     //margin-right: 1em;
@@ -43,7 +40,6 @@
     }
   }
 
-  
 
   .table-col-head {
     i {
@@ -394,6 +390,13 @@
 
   .iron-table-input-field {
     margin-top: 1rem;
+    .picker {
+      top:  0;
+      left: 0;
+      .picker__frame {
+        top: 1%;
+      }
+    }
   }
 
 }
