--- a/client/ironTable.less
+++ b/client/ironTable.less
@@ -66,7 +66,11 @@
     background-clip: padding-box;
     
     .iron-table-heading {
-      margin: -@box-padding;
+      margin: 0em -@box-padding;
+      .col {
+        padding: 0.2em 0.75em;
+      }
+      
     }
 
     .table-container {
@@ -153,9 +157,9 @@
       } 
     }
     .back-btn {
-      padding: 0;
+      //padding: 0;
       i {
-        font-size: 1.4em;
+        font-size: 0.8em;
       }
     }
   }
